# project-supply-chain-sim

./: .flake8  .gitignore  .pylint  Dockerfile  README.md  extension.txt  mypy.ini  pyproject.toml  render.py  resources.md  server-render.ipynb  simulation.py
logs/: logs_repairman_1.json  logs_repairman_2.json  logs_repairman_3.json
simGantt/: gantt_scroll.py  gantt_scroll_fancybox.py
src/: environment.py  machine.py  manufacturer.py  repairman.py  schema.py  shortuuid.py  warehouse.py
test/: bullwhipe.py  logs.json  test.ipynb  test_machine.py
test/gantt/: mermaid_.ipynb  python_.ipynb
